--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chart.js": "^2.7.2",
     "chartjs": "^0.3.24",
+    "cors": "^2.8.5",
     "firebase": "^5.5.3",
     "react": "^16.5.2",
     "react-chartjs-2": "^2.7.4",
@@ -15,7 +16,8 @@
     "react-scripts": "2.0.4",
     "react-table": "^6.8.6",
     "react-tabs": "^2.3.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
